<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- 上半部 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <!-- 游戏区域 -->
        <FrameLayout
            android:id="@+id/layoutGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- 信息辅助区域 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <!-- 预览区域 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#10000000"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/preview"
                    android:textColor="#6261A9" />

                <FrameLayout
                    android:id="@+id/layoutPreview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/score_cur"
                    android:textColor="#6261A9" />

                <TextView
                    android:id="@+id/scoreCur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000" />
            </LinearLayout>

            <!-- 开始按钮 -->
            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_start" />

            <!-- 暂停按钮 -->
            <Button
                android:id="@+id/btn_pause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_pause" />

        </LinearLayout>
    </LinearLayout>

    <!-- 下半部（控制区域） -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <!-- 左移按钮 -->
        <Button
            android:id="@+id/btn_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_left" />

        <!-- 旋转按钮 -->
        <Button
            android:id="@+id/btn_rotate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_rotate" />

        <!-- 下落按钮 -->
        <Button
            android:id="@+id/btn_bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_bottom" />

        <!-- 右移按钮 -->
        <Button
            android:id="@+id/btn_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_right" />
    </LinearLayout>
</LinearLayout>